# synix-bench

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
configs/experiments/: pilot-6x10.json
configs/layouts/: baseline.json  bigreg.json  full.json  masked.json  order-conv-first.json  order-conv-mask.json  order-sys-first.json  order-sys-mask.json  sweep-bigreg-context-1000.json  sweep-bigreg-context-10000.json  sweep-bigreg-context-2000.json  sweep-bigreg-context-500.json  sweep-bigreg-context-5000.json  sweep-bigreg-heapbudget-10000.json  sweep-bigreg-heapbudget-2000.json  sweep-bigreg-heapbudget-20000.json  sweep-bigreg-heapbudget-5000.json  sweep-bigreg-heapbudget-50000.json  sweep-bigreg-maskwin-0.json  sweep-bigreg-maskwin-10.json  sweep-bigreg-maskwin-15.json  sweep-bigreg-maskwin-20.json  sweep-bigreg-maskwin-5.json  sweep-bigreg-regsize-1000.json  sweep-bigreg-regsize-200.json  sweep-bigreg-regsize-2000.json  sweep-bigreg-regsize-500.json  sweep-bigreg-regsize-5000.json  sweep-full-context-1000.json  sweep-full-context-10000.json  sweep-full-context-2000.json  sweep-full-context-500.json  sweep-full-context-5000.json  sweep-full-maskwin-0.json  (+14 more)
docs/: adapters.md  architecture.md  configuration.md  extending.md  scoring.md  strategies.md
prompts/: gc-v1.txt  live-agent-system.txt  manager-v1.txt  manager-v2.txt  manager-v3.txt  manager-v4.txt  stack-heap-ft-v1.txt  stack-heap-v1.txt  stack-heap-v2.txt  stack-heap-v3.txt  stack-heap-v4.txt  stack-heap-v5.txt  stack-heap-v6.txt  stack-heap-v7.txt  stack-heap-v8.txt
scripts/: generate_dashboard.py
(+100 files in other folders)
